WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43598
AX: Placeholder value for text fields not exposed like it should be
https://bugs.webkit.org/show_bug.cgi?id=43598
Summary
AX: Placeholder value for text fields not exposed like it should be
chris fleizach
Reported
2010-08-05 17:35:01 PDT
When a textfield has placeholder text, it should be exposed through kAXPlaceholderValue
Attachments
Patch
(6.53 KB, patch)
2010-08-05 17:39 PDT
,
chris fleizach
ddkilzer
: review+
ddkilzer
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2010-08-05 17:39:31 PDT
Created
attachment 63669
[details]
Patch
chris fleizach
Comment 2
2010-08-09 09:32:00 PDT
kAXPlaceholderValue is only defined on 10.6 however, so we need to also define it
David Kilzer (:ddkilzer)
Comment 3
2010-08-09 16:38:01 PDT
Comment on
attachment 63669
[details]
Patch LayoutTests/accessibility/placeholder.html:19 + description("This test makes sure that the placeholder is returned as the right attribute"); I would prefer "correct" instead of "right" here to make it clear it's a correct/incorrect issue and not a left/right issue. :) r=me
chris fleizach
Comment 4
2010-08-09 16:46:05 PDT
thanks!
http://trac.webkit.org/changeset/65016
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug