AX: Placeholder value for text fields not exposed like it should be https://bugs.webkit.org/show_bug.cgi?id=43598

Reviewed by David Kilzer.

WebCore:

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::placeholderValue):
* accessibility/AccessibilityObject.h:
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::title):
* accessibility/mac/AccessibilityObjectWrapper.mm:
(-[AccessibilityObjectWrapper accessibilityAttributeNames]):
(-[AccessibilityObjectWrapper accessibilityAttributeValue:]):

LayoutTests:

* accessibility/placeholder-expected.txt:
* accessibility/placeholder.html:



Canonical link: https://commits.webkit.org/55823@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65016 268f45cc-cd09-0410-ab3c-d52691b4dbfc