WebCore/accessibility/AccessibilityObject.cpp
@@ -966,6 +966,15 @@ AccessibilityRole AccessibilityObject::ariaRoleToWebCoreRole(const String& value
     return roleMap->get(value);
 }
 
+const AtomicString& AccessibilityObject::placeholderValue() const
+{
+    const AtomicString& placeholder = getAttribute(placeholderAttr);
+    if (!placeholder.isEmpty())
+        return placeholder;
+    
+    return nullAtom;
+}
+    
 bool AccessibilityObject::isInsideARIALiveRegion() const
 {
     if (supportsARIALiveRegion())
