WebCore/accessibility/AccessibilityObject.h
@@ -428,6 +428,7 @@ public:
     virtual FrameView* documentFrameView() const;
     String language() const;
     virtual unsigned hierarchicalLevel() const { return 0; }
+    const AtomicString& placeholderValue() const;
     
     virtual void setFocused(bool) { }
     virtual void setSelectedText(const String&) { }
